v0.0.1/modules/schema/pages/class/PssIEEE4B.adoc
= `PssIEEE4B`
:toclevels: 4


+++IEEE 421.5-2005 type PSS4B power system stabilizer. The PSS4B model represents a structure based on multiple working frequency bands. Three separate bands, respectively dedicated to the low-, intermediate- and high-frequency modes of oscillations, are used in this delta omega (speed input) PSS.
There is an error in the in IEEE 421.5-2005 PSS4B model: the <i>Pe</i> input should read –<i>Pe</i>. This implies that the input <i>Pe</i> needs to be multiplied by -1.
Reference: IEEE 4B 421.5-2005, 8.4. 
Parameter details:
This model has 2 input signals. They have the following fixed types (expressed in terms of InputSignalKind values): the first one is of rotorAngleFrequencyDeviation type and the second one is of generatorElectricalPower type.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PssIEEE4B`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`PssIEEE4B`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
PssIEEE4B {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}

























































































































ExcitationSystemDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}































































PssIEEE4B -> ExcitationSystemDynamics: ExcitationSystemDynamics


PssIEEE4B -> RemoteInputSignal: RemoteInputSignal


PssIEEE4B -> DiagramObject: DiagramObjects


PssIEEE4B -> InstanceSet: InstanceSet


PssIEEE4B -> Name: Names


PssIEEE4B -> ChangeSetMember: PropertiesCIMDataObject


PssIEEE4B -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<bwh1,`bwh1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Notch filter 1 (high-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++

| <<bwh2,`bwh2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Notch filter 2 (high-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++

| <<bwl1,`bwl1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Notch filter 1 (low-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++

| <<bwl2,`bwl2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Notch filter 2 (low-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++

| <<kh,`kh`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++High band gain (<i>K</i><i><sub>H</sub></i>).  Typical value = 120.+++

| <<kh1,`kh1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++High band differential filter gain (<i>K</i><i><sub>H1</sub></i>).  Typical value = 66.+++

| <<kh11,`kh11`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++High band first lead-lag blocks coefficient (<i>K</i><i><sub>H11</sub></i>).  Typical value = 1.+++

| <<kh17,`kh17`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++High band first lead-lag blocks coefficient (<i>K</i><i><sub>H17</sub></i>).  Typical value = 1.+++

| <<kh2,`kh2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++High band differential filter gain (<i>K</i><i><sub>H2</sub></i>).  Typical value = 66.+++

| <<ki,`ki`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intermediate band gain (<i>K</i><i><sub>I</sub></i>).  Typical value = 30.+++

| <<ki1,`ki1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intermediate band differential filter gain (<i>K</i><i><sub>I1</sub></i>).  Typical value = 66.+++

| <<ki11,`ki11`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intermediate band first lead-lag blocks coefficient (<i>K</i><i><sub>I11</sub></i>).  Typical value = 1.+++

| <<ki17,`ki17`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intermediate band first lead-lag blocks coefficient (<i>K</i><i><sub>I17</sub></i>).  Typical value = 1.+++

| <<ki2,`ki2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intermediate band differential filter gain (<i>K</i><i><sub>I2</sub></i>).  Typical value = 66.+++

| <<kl,`kl`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Low band gain (<i>K</i><i><sub>L</sub></i>).  Typical value = 7.5.+++

| <<kl1,`kl1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Low band differential filter gain (<i>K</i><i><sub>L1</sub></i>).  Typical value = 66.+++

| <<kl11,`kl11`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Low band first lead-lag blocks coefficient (<i>K</i><i><sub>L11</sub></i>).  Typical value = 1.+++

| <<kl17,`kl17`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Low band first lead-lag blocks coefficient (<i>K</i><i><sub>L17</sub></i>).  Typical value = 1.+++

| <<kl2,`kl2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Low band differential filter gain (<i>K</i><i><sub>L2</sub></i>).  Typical value = 66.+++

| <<omeganh1,`omeganh1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Notch filter 1 (high-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++

| <<omeganh2,`omeganh2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Notch filter 2 (high-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++

| <<omeganl1,`omeganl1`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Notch filter 1 (low-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++

| <<omeganl2,`omeganl2`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Notch filter 2 (low-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++

| <<th1,`th1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H1</sub></i>) (&gt;= 0).  Typical value = 0,01513.+++

| <<th10,`th10`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H10</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<th11,`th11`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H11</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<th12,`th12`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H12</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<th2,`th2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H2</sub></i>) (&gt;= 0).  Typical value = 0,01816.+++

| <<th3,`th3`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H3</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<th4,`th4`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H4</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<th5,`th5`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H5</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<th6,`th6`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H6</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<th7,`th7`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H7</sub></i>) (&gt;= 0).  Typical value = 0,01816.+++

| <<th8,`th8`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H8</sub></i>) (&gt;= 0).  Typical value = 0,02179.+++

| <<th9,`th9`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H9</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<ti1,`ti1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I1</sub></i>) (&gt;= 0).  Typical value = 0,173.+++

| <<ti10,`ti10`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I10</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<ti11,`ti11`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I11</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<ti12,`ti12`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I12</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<ti2,`ti2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I2</sub></i>) (&gt;= 0).  Typical value = 0,2075.+++

| <<ti3,`ti3`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I3</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<ti4,`ti4`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I4</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<ti5,`ti5`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I5</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<ti6,`ti6`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I6</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<ti7,`ti7`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I7</sub></i>) (&gt;= 0).  Typical value = 0,2075.+++

| <<ti8,`ti8`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I8</sub></i>) (&gt;= 0).  Typical value = 0,2491.+++

| <<ti9,`ti9`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I9</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<tl1,`tl1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L1</sub></i>) (&gt;= 0).  Typical value = 1,73.+++

| <<tl10,`tl10`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L10</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<tl11,`tl11`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L11</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<tl12,`tl12`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L12</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<tl2,`tl2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L2</sub></i>) (&gt;= 0).  Typical value = 2,075.+++

| <<tl3,`tl3`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L3</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<tl4,`tl4`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L4</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<tl5,`tl5`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L5</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<tl6,`tl6`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L6</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<tl7,`tl7`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L7</sub></i>) (&gt;= 0).  Typical value = 2,075.+++

| <<tl8,`tl8`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L8</sub></i>) (&gt;= 0).  Typical value = 2,491.+++

| <<tl9,`tl9`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L9</sub></i>) (&gt;= 0).  Typical value = 0.+++

| <<vhmax,`vhmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++High band output maximum limit (<i>V</i><i><sub>Hmax</sub></i>) (&gt; PssIEEE4B.vhmin).  Typical value = 0,6.+++

| <<vhmin,`vhmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++High band output minimum limit (<i>V</i><i><sub>Hmin</sub></i>) (&lt; PssIEEE4V.vhmax).  Typical value = -0,6.+++

| <<vimax,`vimax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intermediate band output maximum limit (<i>V</i><i><sub>Imax</sub></i>) (&gt; PssIEEE4B.vimin).  Typical value = 0,6.+++

| <<vimin,`vimin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intermediate band output minimum limit (<i>V</i><i><sub>Imin</sub></i>) (&lt; PssIEEE4B.vimax).  Typical value = -0,6.+++

| <<vlmax,`vlmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Low band output maximum limit (<i>V</i><i><sub>Lmax</sub></i>) (&gt; PssIEEE4B.vlmin).  Typical value = 0,075.+++

| <<vlmin,`vlmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Low band output minimum limit (<i>V</i><i><sub>Lmin</sub></i>) (&lt; PssIEEE4B.vlmax).  Typical value = -0,075.+++

| <<vstmax,`vstmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++PSS output maximum limit (<i>V</i><i><sub>STmax</sub></i>) (&gt; PssIEEE4B.vstmin).  Typical value = 0,15.+++

| <<vstmin,`vstmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++PSS output minimum limit (<i>V</i><i><sub>STmin</sub></i>) (&lt; PssIEEE4B.vstmax).  Typical value = -0,15.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..*
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#bwh1]
=== `bwh1`
+++Notch filter 1 (high-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.bwh1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#bwh2]
=== `bwh2`
+++Notch filter 2 (high-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.bwh2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#bwl1]
=== `bwl1`
+++Notch filter 1 (low-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.bwl1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#bwl2]
=== `bwl2`
+++Notch filter 2 (low-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.bwl2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kh]
=== `kh`
+++High band gain (<i>K</i><i><sub>H</sub></i>).  Typical value = 120.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kh`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kh1]
=== `kh1`
+++High band differential filter gain (<i>K</i><i><sub>H1</sub></i>).  Typical value = 66.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kh1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kh11]
=== `kh11`
+++High band first lead-lag blocks coefficient (<i>K</i><i><sub>H11</sub></i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kh11`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kh17]
=== `kh17`
+++High band first lead-lag blocks coefficient (<i>K</i><i><sub>H17</sub></i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kh17`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kh2]
=== `kh2`
+++High band differential filter gain (<i>K</i><i><sub>H2</sub></i>).  Typical value = 66.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kh2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ki]
=== `ki`
+++Intermediate band gain (<i>K</i><i><sub>I</sub></i>).  Typical value = 30.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ki`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ki1]
=== `ki1`
+++Intermediate band differential filter gain (<i>K</i><i><sub>I1</sub></i>).  Typical value = 66.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ki1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ki11]
=== `ki11`
+++Intermediate band first lead-lag blocks coefficient (<i>K</i><i><sub>I11</sub></i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ki11`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ki17]
=== `ki17`
+++Intermediate band first lead-lag blocks coefficient (<i>K</i><i><sub>I17</sub></i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ki17`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ki2]
=== `ki2`
+++Intermediate band differential filter gain (<i>K</i><i><sub>I2</sub></i>).  Typical value = 66.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ki2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kl]
=== `kl`
+++Low band gain (<i>K</i><i><sub>L</sub></i>).  Typical value = 7.5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kl1]
=== `kl1`
+++Low band differential filter gain (<i>K</i><i><sub>L1</sub></i>).  Typical value = 66.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kl1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kl11]
=== `kl11`
+++Low band first lead-lag blocks coefficient (<i>K</i><i><sub>L11</sub></i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kl11`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kl17]
=== `kl17`
+++Low band first lead-lag blocks coefficient (<i>K</i><i><sub>L17</sub></i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kl17`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kl2]
=== `kl2`
+++Low band differential filter gain (<i>K</i><i><sub>L2</sub></i>).  Typical value = 66.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kl2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#omeganh1]
=== `omeganh1`
+++Notch filter 1 (high-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.omeganh1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#omeganh2]
=== `omeganh2`
+++Notch filter 2 (high-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.omeganh2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#omeganl1]
=== `omeganl1`
+++Notch filter 1 (low-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.omeganl1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#omeganl2]
=== `omeganl2`
+++Notch filter 2 (low-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.omeganl2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#th1]
=== `th1`
+++High band time constant (<i>T</i><i><sub>H1</sub></i>) (&gt;= 0).  Typical value = 0,01513.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th10]
=== `th10`
+++High band time constant (<i>T</i><i><sub>H10</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th10`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th11]
=== `th11`
+++High band time constant (<i>T</i><i><sub>H11</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th11`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th12]
=== `th12`
+++High band time constant (<i>T</i><i><sub>H12</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th12`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th2]
=== `th2`
+++High band time constant (<i>T</i><i><sub>H2</sub></i>) (&gt;= 0).  Typical value = 0,01816.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th3]
=== `th3`
+++High band time constant (<i>T</i><i><sub>H3</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th4]
=== `th4`
+++High band time constant (<i>T</i><i><sub>H4</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th5]
=== `th5`
+++High band time constant (<i>T</i><i><sub>H5</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th6]
=== `th6`
+++High band time constant (<i>T</i><i><sub>H6</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th7]
=== `th7`
+++High band time constant (<i>T</i><i><sub>H7</sub></i>) (&gt;= 0).  Typical value = 0,01816.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th7`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th8]
=== `th8`
+++High band time constant (<i>T</i><i><sub>H8</sub></i>) (&gt;= 0).  Typical value = 0,02179.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th8`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#th9]
=== `th9`
+++High band time constant (<i>T</i><i><sub>H9</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th9`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti1]
=== `ti1`
+++Intermediate band time constant (<i>T</i><i><sub>I1</sub></i>) (&gt;= 0).  Typical value = 0,173.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti10]
=== `ti10`
+++Intermediate band time constant (<i>T</i><i><sub>I10</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti10`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti11]
=== `ti11`
+++Intermediate band time constant (<i>T</i><i><sub>I11</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti11`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti12]
=== `ti12`
+++Intermediate band time constant (<i>T</i><i><sub>I12</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti12`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti2]
=== `ti2`
+++Intermediate band time constant (<i>T</i><i><sub>I2</sub></i>) (&gt;= 0).  Typical value = 0,2075.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti3]
=== `ti3`
+++Intermediate band time constant (<i>T</i><i><sub>I3</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti4]
=== `ti4`
+++Intermediate band time constant (<i>T</i><i><sub>I4</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti5]
=== `ti5`
+++Intermediate band time constant (<i>T</i><i><sub>I5</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti6]
=== `ti6`
+++Intermediate band time constant (<i>T</i><i><sub>I6</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti7]
=== `ti7`
+++Intermediate band time constant (<i>T</i><i><sub>I7</sub></i>) (&gt;= 0).  Typical value = 0,2075.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti7`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti8]
=== `ti8`
+++Intermediate band time constant (<i>T</i><i><sub>I8</sub></i>) (&gt;= 0).  Typical value = 0,2491.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti8`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti9]
=== `ti9`
+++Intermediate band time constant (<i>T</i><i><sub>I9</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti9`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl1]
=== `tl1`
+++Low band time constant (<i>T</i><i><sub>L1</sub></i>) (&gt;= 0).  Typical value = 1,73.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl10]
=== `tl10`
+++Low band time constant (<i>T</i><i><sub>L10</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl10`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl11]
=== `tl11`
+++Low band time constant (<i>T</i><i><sub>L11</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl11`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl12]
=== `tl12`
+++Low band time constant (<i>T</i><i><sub>L12</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl12`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl2]
=== `tl2`
+++Low band time constant (<i>T</i><i><sub>L2</sub></i>) (&gt;= 0).  Typical value = 2,075.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl3]
=== `tl3`
+++Low band time constant (<i>T</i><i><sub>L3</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl4]
=== `tl4`
+++Low band time constant (<i>T</i><i><sub>L4</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl5]
=== `tl5`
+++Low band time constant (<i>T</i><i><sub>L5</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl6]
=== `tl6`
+++Low band time constant (<i>T</i><i><sub>L6</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl7]
=== `tl7`
+++Low band time constant (<i>T</i><i><sub>L7</sub></i>) (&gt;= 0).  Typical value = 2,075.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl7`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl8]
=== `tl8`
+++Low band time constant (<i>T</i><i><sub>L8</sub></i>) (&gt;= 0).  Typical value = 2,491.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl8`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tl9]
=== `tl9`
+++Low band time constant (<i>T</i><i><sub>L9</sub></i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl9`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#vhmax]
=== `vhmax`
+++High band output maximum limit (<i>V</i><i><sub>Hmax</sub></i>) (&gt; PssIEEE4B.vhmin).  Typical value = 0,6.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vhmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vhmin]
=== `vhmin`
+++High band output minimum limit (<i>V</i><i><sub>Hmin</sub></i>) (&lt; PssIEEE4V.vhmax).  Typical value = -0,6.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vhmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vimax]
=== `vimax`
+++Intermediate band output maximum limit (<i>V</i><i><sub>Imax</sub></i>) (&gt; PssIEEE4B.vimin).  Typical value = 0,6.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vimax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vimin]
=== `vimin`
+++Intermediate band output minimum limit (<i>V</i><i><sub>Imin</sub></i>) (&lt; PssIEEE4B.vimax).  Typical value = -0,6.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vimin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vlmax]
=== `vlmax`
+++Low band output maximum limit (<i>V</i><i><sub>Lmax</sub></i>) (&gt; PssIEEE4B.vlmin).  Typical value = 0,075.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vlmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vlmin]
=== `vlmin`
+++Low band output minimum limit (<i>V</i><i><sub>Lmin</sub></i>) (&lt; PssIEEE4B.vlmax).  Typical value = -0,075.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vlmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vstmax]
=== `vstmax`
+++PSS output maximum limit (<i>V</i><i><sub>STmax</sub></i>) (&gt; PssIEEE4B.vstmin).  Typical value = 0,15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vstmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vstmin]
=== `vstmin`
+++PSS output minimum limit (<i>V</i><i><sub>STmin</sub></i>) (&lt; PssIEEE4B.vstmax).  Typical value = -0,15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vstmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


