v1.1.0/modules/schema/pages/class/PssIEEE4B.adoc
= `PssIEEE4B`
:toclevels: 4


+++IEEE 421.5-2005 type PSS4B power system stabilizer. The PSS4B model represents a structure based on multiple working frequency bands. Three separate bands, respectively dedicated to the low-, intermediate- and high-frequency modes of oscillations, are used in this delta omega (speed input) PSS.
There is an error in the in IEEE 421.5-2005 PSS4B model: the <i>Pe</i> input should read –<i>Pe</i>. This implies that the input <i>Pe</i> needs to be multiplied by -1.
Reference: IEEE 4B 421.5-2005, 8.4. 
Parameter details:
This model has 2 input signals. They have the following fixed types (expressed in terms of InputSignalKind values): the first one is of rotorAngleFrequencyDeviation type and the second one is of generatorElectricalPower type.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PssIEEE4B`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`PssIEEE4B`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<bwh1,`bwh1`>>
//| [[slots_table.bwh1]]<<bwh1,`bwh1`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Notch filter 1 (high-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++
| _n/a_

| <<bwh2,`bwh2`>>
//| [[slots_table.bwh2]]<<bwh2,`bwh2`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Notch filter 2 (high-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++
| _n/a_

| <<bwl1,`bwl1`>>
//| [[slots_table.bwl1]]<<bwl1,`bwl1`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Notch filter 1 (low-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++
| _n/a_

| <<bwl2,`bwl2`>>
//| [[slots_table.bwl2]]<<bwl2,`bwl2`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Notch filter 2 (low-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++
| _n/a_

| <<kh,`kh`>>
//| [[slots_table.kh]]<<kh,`kh`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++High band gain (<i>K</i><i><sub>H</sub></i>).  Typical value = 120.+++
| _n/a_

| <<kh1,`kh1`>>
//| [[slots_table.kh1]]<<kh1,`kh1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++High band differential filter gain (<i>K</i><i><sub>H1</sub></i>).  Typical value = 66.+++
| _n/a_

| <<kh11,`kh11`>>
//| [[slots_table.kh11]]<<kh11,`kh11`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++High band first lead-lag blocks coefficient (<i>K</i><i><sub>H11</sub></i>).  Typical value = 1.+++
| _n/a_

| <<kh17,`kh17`>>
//| [[slots_table.kh17]]<<kh17,`kh17`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++High band first lead-lag blocks coefficient (<i>K</i><i><sub>H17</sub></i>).  Typical value = 1.+++
| _n/a_

| <<kh2,`kh2`>>
//| [[slots_table.kh2]]<<kh2,`kh2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++High band differential filter gain (<i>K</i><i><sub>H2</sub></i>).  Typical value = 66.+++
| _n/a_

| <<ki,`ki`>>
//| [[slots_table.ki]]<<ki,`ki`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intermediate band gain (<i>K</i><i><sub>I</sub></i>).  Typical value = 30.+++
| _n/a_

| <<ki1,`ki1`>>
//| [[slots_table.ki1]]<<ki1,`ki1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intermediate band differential filter gain (<i>K</i><i><sub>I1</sub></i>).  Typical value = 66.+++
| _n/a_

| <<ki11,`ki11`>>
//| [[slots_table.ki11]]<<ki11,`ki11`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intermediate band first lead-lag blocks coefficient (<i>K</i><i><sub>I11</sub></i>).  Typical value = 1.+++
| _n/a_

| <<ki17,`ki17`>>
//| [[slots_table.ki17]]<<ki17,`ki17`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intermediate band first lead-lag blocks coefficient (<i>K</i><i><sub>I17</sub></i>).  Typical value = 1.+++
| _n/a_

| <<ki2,`ki2`>>
//| [[slots_table.ki2]]<<ki2,`ki2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intermediate band differential filter gain (<i>K</i><i><sub>I2</sub></i>).  Typical value = 66.+++
| _n/a_

| <<kl,`kl`>>
//| [[slots_table.kl]]<<kl,`kl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Low band gain (<i>K</i><i><sub>L</sub></i>).  Typical value = 7.5.+++
| _n/a_

| <<kl1,`kl1`>>
//| [[slots_table.kl1]]<<kl1,`kl1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Low band differential filter gain (<i>K</i><i><sub>L1</sub></i>).  Typical value = 66.+++
| _n/a_

| <<kl11,`kl11`>>
//| [[slots_table.kl11]]<<kl11,`kl11`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Low band first lead-lag blocks coefficient (<i>K</i><i><sub>L11</sub></i>).  Typical value = 1.+++
| _n/a_

| <<kl17,`kl17`>>
//| [[slots_table.kl17]]<<kl17,`kl17`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Low band first lead-lag blocks coefficient (<i>K</i><i><sub>L17</sub></i>).  Typical value = 1.+++
| _n/a_

| <<kl2,`kl2`>>
//| [[slots_table.kl2]]<<kl2,`kl2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Low band differential filter gain (<i>K</i><i><sub>L2</sub></i>).  Typical value = 66.+++
| _n/a_

| <<omeganh1,`omeganh1`>>
//| [[slots_table.omeganh1]]<<omeganh1,`omeganh1`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Notch filter 1 (high-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++
| _n/a_

| <<omeganh2,`omeganh2`>>
//| [[slots_table.omeganh2]]<<omeganh2,`omeganh2`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Notch filter 2 (high-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++
| _n/a_

| <<omeganl1,`omeganl1`>>
//| [[slots_table.omeganl1]]<<omeganl1,`omeganl1`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Notch filter 1 (low-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++
| _n/a_

| <<omeganl2,`omeganl2`>>
//| [[slots_table.omeganl2]]<<omeganl2,`omeganl2`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Notch filter 2 (low-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++
| _n/a_

| <<th1,`th1`>>
//| [[slots_table.th1]]<<th1,`th1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H1</sub></i>) (&gt;= 0).  Typical value = 0,01513.+++
| _n/a_

| <<th10,`th10`>>
//| [[slots_table.th10]]<<th10,`th10`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H10</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<th11,`th11`>>
//| [[slots_table.th11]]<<th11,`th11`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H11</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<th12,`th12`>>
//| [[slots_table.th12]]<<th12,`th12`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H12</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<th2,`th2`>>
//| [[slots_table.th2]]<<th2,`th2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H2</sub></i>) (&gt;= 0).  Typical value = 0,01816.+++
| _n/a_

| <<th3,`th3`>>
//| [[slots_table.th3]]<<th3,`th3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H3</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<th4,`th4`>>
//| [[slots_table.th4]]<<th4,`th4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H4</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<th5,`th5`>>
//| [[slots_table.th5]]<<th5,`th5`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H5</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<th6,`th6`>>
//| [[slots_table.th6]]<<th6,`th6`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H6</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<th7,`th7`>>
//| [[slots_table.th7]]<<th7,`th7`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H7</sub></i>) (&gt;= 0).  Typical value = 0,01816.+++
| _n/a_

| <<th8,`th8`>>
//| [[slots_table.th8]]<<th8,`th8`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H8</sub></i>) (&gt;= 0).  Typical value = 0,02179.+++
| _n/a_

| <<th9,`th9`>>
//| [[slots_table.th9]]<<th9,`th9`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High band time constant (<i>T</i><i><sub>H9</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ti1,`ti1`>>
//| [[slots_table.ti1]]<<ti1,`ti1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I1</sub></i>) (&gt;= 0).  Typical value = 0,173.+++
| _n/a_

| <<ti10,`ti10`>>
//| [[slots_table.ti10]]<<ti10,`ti10`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I10</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ti11,`ti11`>>
//| [[slots_table.ti11]]<<ti11,`ti11`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I11</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ti12,`ti12`>>
//| [[slots_table.ti12]]<<ti12,`ti12`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I12</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ti2,`ti2`>>
//| [[slots_table.ti2]]<<ti2,`ti2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I2</sub></i>) (&gt;= 0).  Typical value = 0,2075.+++
| _n/a_

| <<ti3,`ti3`>>
//| [[slots_table.ti3]]<<ti3,`ti3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I3</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ti4,`ti4`>>
//| [[slots_table.ti4]]<<ti4,`ti4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I4</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ti5,`ti5`>>
//| [[slots_table.ti5]]<<ti5,`ti5`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I5</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ti6,`ti6`>>
//| [[slots_table.ti6]]<<ti6,`ti6`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I6</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ti7,`ti7`>>
//| [[slots_table.ti7]]<<ti7,`ti7`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I7</sub></i>) (&gt;= 0).  Typical value = 0,2075.+++
| _n/a_

| <<ti8,`ti8`>>
//| [[slots_table.ti8]]<<ti8,`ti8`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I8</sub></i>) (&gt;= 0).  Typical value = 0,2491.+++
| _n/a_

| <<ti9,`ti9`>>
//| [[slots_table.ti9]]<<ti9,`ti9`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intermediate band time constant (<i>T</i><i><sub>I9</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tl1,`tl1`>>
//| [[slots_table.tl1]]<<tl1,`tl1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L1</sub></i>) (&gt;= 0).  Typical value = 1,73.+++
| _n/a_

| <<tl10,`tl10`>>
//| [[slots_table.tl10]]<<tl10,`tl10`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L10</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tl11,`tl11`>>
//| [[slots_table.tl11]]<<tl11,`tl11`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L11</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tl12,`tl12`>>
//| [[slots_table.tl12]]<<tl12,`tl12`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L12</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tl2,`tl2`>>
//| [[slots_table.tl2]]<<tl2,`tl2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L2</sub></i>) (&gt;= 0).  Typical value = 2,075.+++
| _n/a_

| <<tl3,`tl3`>>
//| [[slots_table.tl3]]<<tl3,`tl3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L3</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tl4,`tl4`>>
//| [[slots_table.tl4]]<<tl4,`tl4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L4</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tl5,`tl5`>>
//| [[slots_table.tl5]]<<tl5,`tl5`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L5</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tl6,`tl6`>>
//| [[slots_table.tl6]]<<tl6,`tl6`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L6</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tl7,`tl7`>>
//| [[slots_table.tl7]]<<tl7,`tl7`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L7</sub></i>) (&gt;= 0).  Typical value = 2,075.+++
| _n/a_

| <<tl8,`tl8`>>
//| [[slots_table.tl8]]<<tl8,`tl8`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L8</sub></i>) (&gt;= 0).  Typical value = 2,491.+++
| _n/a_

| <<tl9,`tl9`>>
//| [[slots_table.tl9]]<<tl9,`tl9`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low band time constant (<i>T</i><i><sub>L9</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<vhmax,`vhmax`>>
//| [[slots_table.vhmax]]<<vhmax,`vhmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++High band output maximum limit (<i>V</i><i><sub>Hmax</sub></i>) (&gt; PssIEEE4B.vhmin).  Typical value = 0,6.+++
| _n/a_

| <<vhmin,`vhmin`>>
//| [[slots_table.vhmin]]<<vhmin,`vhmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++High band output minimum limit (<i>V</i><i><sub>Hmin</sub></i>) (&lt; PssIEEE4V.vhmax).  Typical value = -0,6.+++
| _n/a_

| <<vimax,`vimax`>>
//| [[slots_table.vimax]]<<vimax,`vimax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intermediate band output maximum limit (<i>V</i><i><sub>Imax</sub></i>) (&gt; PssIEEE4B.vimin).  Typical value = 0,6.+++
| _n/a_

| <<vimin,`vimin`>>
//| [[slots_table.vimin]]<<vimin,`vimin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intermediate band output minimum limit (<i>V</i><i><sub>Imin</sub></i>) (&lt; PssIEEE4B.vimax).  Typical value = -0,6.+++
| _n/a_

| <<vlmax,`vlmax`>>
//| [[slots_table.vlmax]]<<vlmax,`vlmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Low band output maximum limit (<i>V</i><i><sub>Lmax</sub></i>) (&gt; PssIEEE4B.vlmin).  Typical value = 0,075.+++
| _n/a_

| <<vlmin,`vlmin`>>
//| [[slots_table.vlmin]]<<vlmin,`vlmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Low band output minimum limit (<i>V</i><i><sub>Lmin</sub></i>) (&lt; PssIEEE4B.vlmax).  Typical value = -0,075.+++
| _n/a_

| <<vstmax,`vstmax`>>
//| [[slots_table.vstmax]]<<vstmax,`vstmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++PSS output maximum limit (<i>V</i><i><sub>STmax</sub></i>) (&gt; PssIEEE4B.vstmin).  Typical value = 0,15.+++
| _n/a_

| <<vstmin,`vstmin`>>
//| [[slots_table.vstmin]]<<vstmin,`vstmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++PSS output minimum limit (<i>V</i><i><sub>STmin</sub></i>) (&lt; PssIEEE4B.vstmax).  Typical value = -0,15.+++
| _n/a_

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..* +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#bwh1]
=== `bwh1`
+++Notch filter 1 (high-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.bwh1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.bwh1,&#10548;>>
--
////


//[discrete]
[#bwh2]
=== `bwh2`
+++Notch filter 2 (high-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.bwh2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.bwh2,&#10548;>>
--
////


//[discrete]
[#bwl1]
=== `bwl1`
+++Notch filter 1 (low-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.bwl1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.bwl1,&#10548;>>
--
////


//[discrete]
[#bwl2]
=== `bwl2`
+++Notch filter 2 (low-frequency band): three dB bandwidth (<i>B</i><i><sub>wi</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.bwl2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.bwl2,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kh]
=== `kh`
+++High band gain (<i>K</i><i><sub>H</sub></i>).  Typical value = 120.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kh`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kh,&#10548;>>
--
////


//[discrete]
[#kh1]
=== `kh1`
+++High band differential filter gain (<i>K</i><i><sub>H1</sub></i>).  Typical value = 66.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kh1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kh1,&#10548;>>
--
////


//[discrete]
[#kh11]
=== `kh11`
+++High band first lead-lag blocks coefficient (<i>K</i><i><sub>H11</sub></i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kh11`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kh11,&#10548;>>
--
////


//[discrete]
[#kh17]
=== `kh17`
+++High band first lead-lag blocks coefficient (<i>K</i><i><sub>H17</sub></i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kh17`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kh17,&#10548;>>
--
////


//[discrete]
[#kh2]
=== `kh2`
+++High band differential filter gain (<i>K</i><i><sub>H2</sub></i>).  Typical value = 66.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kh2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kh2,&#10548;>>
--
////


//[discrete]
[#ki]
=== `ki`
+++Intermediate band gain (<i>K</i><i><sub>I</sub></i>).  Typical value = 30.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ki`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ki,&#10548;>>
--
////


//[discrete]
[#ki1]
=== `ki1`
+++Intermediate band differential filter gain (<i>K</i><i><sub>I1</sub></i>).  Typical value = 66.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ki1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ki1,&#10548;>>
--
////


//[discrete]
[#ki11]
=== `ki11`
+++Intermediate band first lead-lag blocks coefficient (<i>K</i><i><sub>I11</sub></i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ki11`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ki11,&#10548;>>
--
////


//[discrete]
[#ki17]
=== `ki17`
+++Intermediate band first lead-lag blocks coefficient (<i>K</i><i><sub>I17</sub></i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ki17`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ki17,&#10548;>>
--
////


//[discrete]
[#ki2]
=== `ki2`
+++Intermediate band differential filter gain (<i>K</i><i><sub>I2</sub></i>).  Typical value = 66.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ki2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ki2,&#10548;>>
--
////


//[discrete]
[#kl]
=== `kl`
+++Low band gain (<i>K</i><i><sub>L</sub></i>).  Typical value = 7.5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kl,&#10548;>>
--
////


//[discrete]
[#kl1]
=== `kl1`
+++Low band differential filter gain (<i>K</i><i><sub>L1</sub></i>).  Typical value = 66.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kl1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kl1,&#10548;>>
--
////


//[discrete]
[#kl11]
=== `kl11`
+++Low band first lead-lag blocks coefficient (<i>K</i><i><sub>L11</sub></i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kl11`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kl11,&#10548;>>
--
////


//[discrete]
[#kl17]
=== `kl17`
+++Low band first lead-lag blocks coefficient (<i>K</i><i><sub>L17</sub></i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kl17`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kl17,&#10548;>>
--
////


//[discrete]
[#kl2]
=== `kl2`
+++Low band differential filter gain (<i>K</i><i><sub>L2</sub></i>).  Typical value = 66.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.kl2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kl2,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#omeganh1]
=== `omeganh1`
+++Notch filter 1 (high-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.omeganh1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.omeganh1,&#10548;>>
--
////


//[discrete]
[#omeganh2]
=== `omeganh2`
+++Notch filter 2 (high-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.omeganh2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.omeganh2,&#10548;>>
--
////


//[discrete]
[#omeganl1]
=== `omeganl1`
+++Notch filter 1 (low-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.omeganl1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.omeganl1,&#10548;>>
--
////


//[discrete]
[#omeganl2]
=== `omeganl2`
+++Notch filter 2 (low-frequency band): filter frequency (<i>omega</i><i><sub>ni</sub></i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.omeganl2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.omeganl2,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#th1]
=== `th1`
+++High band time constant (<i>T</i><i><sub>H1</sub></i>) (&gt;= 0).  Typical value = 0,01513.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th1,&#10548;>>
--
////


//[discrete]
[#th10]
=== `th10`
+++High band time constant (<i>T</i><i><sub>H10</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th10`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th10,&#10548;>>
--
////


//[discrete]
[#th11]
=== `th11`
+++High band time constant (<i>T</i><i><sub>H11</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th11`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th11,&#10548;>>
--
////


//[discrete]
[#th12]
=== `th12`
+++High band time constant (<i>T</i><i><sub>H12</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th12`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th12,&#10548;>>
--
////


//[discrete]
[#th2]
=== `th2`
+++High band time constant (<i>T</i><i><sub>H2</sub></i>) (&gt;= 0).  Typical value = 0,01816.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th2,&#10548;>>
--
////


//[discrete]
[#th3]
=== `th3`
+++High band time constant (<i>T</i><i><sub>H3</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th3,&#10548;>>
--
////


//[discrete]
[#th4]
=== `th4`
+++High band time constant (<i>T</i><i><sub>H4</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th4,&#10548;>>
--
////


//[discrete]
[#th5]
=== `th5`
+++High band time constant (<i>T</i><i><sub>H5</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th5,&#10548;>>
--
////


//[discrete]
[#th6]
=== `th6`
+++High band time constant (<i>T</i><i><sub>H6</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th6,&#10548;>>
--
////


//[discrete]
[#th7]
=== `th7`
+++High band time constant (<i>T</i><i><sub>H7</sub></i>) (&gt;= 0).  Typical value = 0,01816.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th7`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th7,&#10548;>>
--
////


//[discrete]
[#th8]
=== `th8`
+++High band time constant (<i>T</i><i><sub>H8</sub></i>) (&gt;= 0).  Typical value = 0,02179.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th8`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th8,&#10548;>>
--
////


//[discrete]
[#th9]
=== `th9`
+++High band time constant (<i>T</i><i><sub>H9</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.th9`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.th9,&#10548;>>
--
////


//[discrete]
[#ti1]
=== `ti1`
+++Intermediate band time constant (<i>T</i><i><sub>I1</sub></i>) (&gt;= 0).  Typical value = 0,173.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti1,&#10548;>>
--
////


//[discrete]
[#ti10]
=== `ti10`
+++Intermediate band time constant (<i>T</i><i><sub>I10</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti10`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti10,&#10548;>>
--
////


//[discrete]
[#ti11]
=== `ti11`
+++Intermediate band time constant (<i>T</i><i><sub>I11</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti11`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti11,&#10548;>>
--
////


//[discrete]
[#ti12]
=== `ti12`
+++Intermediate band time constant (<i>T</i><i><sub>I12</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti12`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti12,&#10548;>>
--
////


//[discrete]
[#ti2]
=== `ti2`
+++Intermediate band time constant (<i>T</i><i><sub>I2</sub></i>) (&gt;= 0).  Typical value = 0,2075.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti2,&#10548;>>
--
////


//[discrete]
[#ti3]
=== `ti3`
+++Intermediate band time constant (<i>T</i><i><sub>I3</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti3,&#10548;>>
--
////


//[discrete]
[#ti4]
=== `ti4`
+++Intermediate band time constant (<i>T</i><i><sub>I4</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti4,&#10548;>>
--
////


//[discrete]
[#ti5]
=== `ti5`
+++Intermediate band time constant (<i>T</i><i><sub>I5</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti5,&#10548;>>
--
////


//[discrete]
[#ti6]
=== `ti6`
+++Intermediate band time constant (<i>T</i><i><sub>I6</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti6,&#10548;>>
--
////


//[discrete]
[#ti7]
=== `ti7`
+++Intermediate band time constant (<i>T</i><i><sub>I7</sub></i>) (&gt;= 0).  Typical value = 0,2075.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti7`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti7,&#10548;>>
--
////


//[discrete]
[#ti8]
=== `ti8`
+++Intermediate band time constant (<i>T</i><i><sub>I8</sub></i>) (&gt;= 0).  Typical value = 0,2491.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti8`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti8,&#10548;>>
--
////


//[discrete]
[#ti9]
=== `ti9`
+++Intermediate band time constant (<i>T</i><i><sub>I9</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.ti9`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti9,&#10548;>>
--
////


//[discrete]
[#tl1]
=== `tl1`
+++Low band time constant (<i>T</i><i><sub>L1</sub></i>) (&gt;= 0).  Typical value = 1,73.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl1,&#10548;>>
--
////


//[discrete]
[#tl10]
=== `tl10`
+++Low band time constant (<i>T</i><i><sub>L10</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl10`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl10,&#10548;>>
--
////


//[discrete]
[#tl11]
=== `tl11`
+++Low band time constant (<i>T</i><i><sub>L11</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl11`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl11,&#10548;>>
--
////


//[discrete]
[#tl12]
=== `tl12`
+++Low band time constant (<i>T</i><i><sub>L12</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl12`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl12,&#10548;>>
--
////


//[discrete]
[#tl2]
=== `tl2`
+++Low band time constant (<i>T</i><i><sub>L2</sub></i>) (&gt;= 0).  Typical value = 2,075.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl2,&#10548;>>
--
////


//[discrete]
[#tl3]
=== `tl3`
+++Low band time constant (<i>T</i><i><sub>L3</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl3,&#10548;>>
--
////


//[discrete]
[#tl4]
=== `tl4`
+++Low band time constant (<i>T</i><i><sub>L4</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl4,&#10548;>>
--
////


//[discrete]
[#tl5]
=== `tl5`
+++Low band time constant (<i>T</i><i><sub>L5</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl5,&#10548;>>
--
////


//[discrete]
[#tl6]
=== `tl6`
+++Low band time constant (<i>T</i><i><sub>L6</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl6`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl6,&#10548;>>
--
////


//[discrete]
[#tl7]
=== `tl7`
+++Low band time constant (<i>T</i><i><sub>L7</sub></i>) (&gt;= 0).  Typical value = 2,075.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl7`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl7,&#10548;>>
--
////


//[discrete]
[#tl8]
=== `tl8`
+++Low band time constant (<i>T</i><i><sub>L8</sub></i>) (&gt;= 0).  Typical value = 2,491.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl8`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl8,&#10548;>>
--
////


//[discrete]
[#tl9]
=== `tl9`
+++Low band time constant (<i>T</i><i><sub>L9</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.tl9`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tl9,&#10548;>>
--
////


//[discrete]
[#vhmax]
=== `vhmax`
+++High band output maximum limit (<i>V</i><i><sub>Hmax</sub></i>) (&gt; PssIEEE4B.vhmin).  Typical value = 0,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vhmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vhmax,&#10548;>>
--
////


//[discrete]
[#vhmin]
=== `vhmin`
+++High band output minimum limit (<i>V</i><i><sub>Hmin</sub></i>) (&lt; PssIEEE4V.vhmax).  Typical value = -0,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vhmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vhmin,&#10548;>>
--
////


//[discrete]
[#vimax]
=== `vimax`
+++Intermediate band output maximum limit (<i>V</i><i><sub>Imax</sub></i>) (&gt; PssIEEE4B.vimin).  Typical value = 0,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vimax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vimax,&#10548;>>
--
////


//[discrete]
[#vimin]
=== `vimin`
+++Intermediate band output minimum limit (<i>V</i><i><sub>Imin</sub></i>) (&lt; PssIEEE4B.vimax).  Typical value = -0,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vimin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vimin,&#10548;>>
--
////


//[discrete]
[#vlmax]
=== `vlmax`
+++Low band output maximum limit (<i>V</i><i><sub>Lmax</sub></i>) (&gt; PssIEEE4B.vlmin).  Typical value = 0,075.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vlmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vlmax,&#10548;>>
--
////


//[discrete]
[#vlmin]
=== `vlmin`
+++Low band output minimum limit (<i>V</i><i><sub>Lmin</sub></i>) (&lt; PssIEEE4B.vlmax).  Typical value = -0,075.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vlmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vlmin,&#10548;>>
--
////


//[discrete]
[#vstmax]
=== `vstmax`
+++PSS output maximum limit (<i>V</i><i><sub>STmax</sub></i>) (&gt; PssIEEE4B.vstmin).  Typical value = 0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vstmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vstmax,&#10548;>>
--
////


//[discrete]
[#vstmin]
=== `vstmin`
+++PSS output minimum limit (<i>V</i><i><sub>STmin</sub></i>) (&lt; PssIEEE4B.vstmax).  Typical value = -0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE4B.vstmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vstmin,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
